--- a/.github/workflows/commit-stage.yml
+++ b/.github/workflows/commit-stage.yml
@@ -18,19 +18,19 @@ jobs:
           distribution: temurin
           java-version: 21
           cache: gradle
-      - name: Code Vulnerability Scanning
-        uses: anchore/scan-action@v3
-        id: scan
-        with:
-          path: "${{ github.workspace }}"
-          fail-build: false
-          severity-cutoff: high
-          acs-report-enable: true
-      - name: Upload vulnerability report
-        uses: github/codeql-action/upload-sarif@v3
-        if: success() || failure()
-        with:
-          sarif_file: ${{ steps.scan.outputs.sarif }}
+#      - name: Code Vulnerability Scanning
+#        uses: anchore/scan-action@v3
+#        id: scan
+#        with:
+#          path: "${{ github.workspace }}"
+#          fail-build: false
+#          severity-cutoff: high
+#          acs-report-enable: true
+#      - name: Upload vulnerability report
+#        uses: github/codeql-action/upload-sarif@v3
+#        if: success() || failure()
+#        with:
+#          sarif_file: ${{ steps.scan.outputs.sarif }}
       - name: Build, unit tests and integration tests
         run: |
           chmod +x gradlew
