--- a/build.gradle
+++ b/build.gradle
@@ -17,12 +17,19 @@ repositories {
     mavenCentral()
 }
 
+configurations {
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
+}
+
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
 
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
+    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.boot:spring-boot-starter-webflux'
@@ -31,6 +38,11 @@ dependencies {
 
 test {
     useJUnitPlatform()
+}
+
+bootRun {
+
+    systemProperty 'spring.profiles.active', 'testdata'
 }
 
 
