--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -6,6 +6,30 @@
 #    threads:
 #      max: 50
 #      min-spare: 5
+#logging:
+#  level:
+#    root: DEBUG
+spring:
+  application:
+    name: catalog-service
+  config:
+    import: "configserver:"
+  cloud:
+    config:
+      uri: http://localhost:8888
+      request-connect-timeout: 5000
+      request-read-timeout: 5000
+      fail-fast: true
+      retry:
+        max-attempts: 6
+        initial-interval: 1000
+        max-interval: 2000
+        multiplier: 1.1
 
-bs:
-  greeting: Welcome to the local book catalog!
+management:
+  endpoints:
+    web:
+      exposure:
+        include: refresh
+#bs:
+#  greeting: Welcome to the local book catalog!
