--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -13,23 +13,34 @@ spring:
   application:
     name: catalog-service
   config:
-    import: "configserver:"
+    import: "optional:configserver:"
   cloud:
     config:
       uri: http://localhost:8888
       request-connect-timeout: 5000
       request-read-timeout: 5000
-      fail-fast: true
+      fail-fast: false
       retry:
         max-attempts: 6
         initial-interval: 1000
         max-interval: 2000
         multiplier: 1.1
+  datasource:
+    username: user
+    password: password
+    url: jdbc:postgresql://localhost:5432/bsdb_catalog
+    hikari:
+      connection-timeout: 2000
+      maximum-pool-size: 5
+  sql:
+    init:
+      mode: always
 
 management:
   endpoints:
     web:
       exposure:
         include: refresh
+
 #bs:
 #  greeting: Welcome to the local book catalog!
