--- a/build.gradle
+++ b/build.gradle
@@ -61,6 +61,8 @@ test {
     useJUnitPlatform()
 }
 
+jar.enabled = false
+
 bootRun {
     systemProperty 'spring.profiles.active', 'testdata'
 //    systemProperty 'spring.profiles.active', 'testdata,prod'
