--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -17,6 +17,11 @@ spec:
         - name: catalog-service
           image: catalog-service
           imagePullPolicy: IfNotPresent
+          lifecycle:
+            preStop:
+              exec:
+                # makes k8s wait for 5 seconds before sending the SIGTERM
+                command: [ "sh", "-c", "sleep 5" ]
           ports:
             - containerPort: 9001
           env:
