--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -30,5 +30,7 @@ spec:
               value: "50"
             - name: SPRING_DATASOURCE_URL
               value: jdbc:postgresql://bookshop-postgres/bookshopdb_catalog
+            - name: SPRING_CLOUD_CONFIG_URI
+              value: http://config-service
             - name: SPRING_PROFILES_ACTIVE
               value: testdata
