--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,8 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.3.3'
+    id 'org.springframework.boot' version '3.3.4'
     id 'io.spring.dependency-management' version '1.1.6'
+    id 'com.google.cloud.tools.jib' version '3.4.2'
 }
 
 group = 'com.daviag.bookshop'
@@ -87,5 +88,3 @@ bootBuildImage {
 //    -PregistryUrl=ghcr.io \
 //    -PregistryUsername=<your_github_username> \
 //    -PregistryToken=<your_github_token>
-
-
