--- a/build.gradle
+++ b/build.gradle
@@ -43,7 +43,11 @@ dependencies {
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.boot:spring-boot-starter-webflux'
+    testImplementation 'org.springframework.security:spring-security-test'
+//    testImplementation 'org.springframework.boot:spring-boot-testcontainers'
+    testImplementation 'org.testcontainers:junit-jupiter'
     testImplementation 'org.testcontainers:postgresql'
+    testImplementation 'com.github.dasniko:testcontainers-keycloak:3.4.0'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
