--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -34,3 +34,5 @@ spec:
               value: http://config-service
             - name: SPRING_PROFILES_ACTIVE
               value: testdata
+            - name: SPRING_SECURITY_OAUTH2_CLIENT_PROVIDER_KEYCLOAK_ISSUER_URI
+              value: http://bookshop-keycloak/realms/Bookshop
