--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -45,7 +45,11 @@ management:
   endpoints:
     web:
       exposure:
-        include: refresh
+        include: health
+  endpoint:
+    health:
+      show-details: always
+      show-components: always
 
 #bs:
 #  greeting: Welcome to the local book catalog!
