--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -25,6 +25,24 @@ spec:
                 command: [ "sh", "-c", "sleep 5" ]
           ports:
             - containerPort: 9001
+          startupProbe:
+            httpGet:
+              path: /actuator/health/liveness
+              port: 9001
+            failureThreshold: 30
+            periodSeconds: 10
+          livenessProbe:
+            httpGet:
+              path: /actuator/health/liveness
+              port: 9001
+            initialDelaySeconds: 10
+            periodSeconds: 5
+          readinessProbe:
+            httpGet:
+              path: /actuator/health/readiness
+              port: 9001
+            initialDelaySeconds: 5
+            periodSeconds: 15
           env:
             - name: BPL_JVM_THREAD_COUNT
               value: "50"
@@ -34,5 +52,5 @@ spec:
               value: http://config-service
             - name: SPRING_PROFILES_ACTIVE
               value: testdata
-            - name: SPRING_SECURITY_OAUTH2_CLIENT_PROVIDER_KEYCLOAK_ISSUER_URI
+            - name: SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_ISSUER_URI
               value: http://bookshop-keycloak/realms/Bookshop
