--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -41,11 +41,21 @@ spring:
       connection-timeout: 2000
       maximum-pool-size: 5
 
+info:
+  system: Bookshopppppppppppppp
+
 management:
   endpoints:
     web:
       exposure:
-        include: health, prometheus
+        include: flyway, health, heapdump, info, prometheus
+  info:
+    env:
+      enabled: true
+    java:
+      enabled: true
+    os:
+      enabled: true
   endpoint:
     health:
       show-details: always
@@ -56,6 +66,10 @@ management:
     tags:
       application: ${spring.application.name}
 
-#bs:
-#  greeting: Welcome to the local book catalog!
+logging:
+  pattern:
+    level: "%5p [${spring.application.name}, %X{trace_id}, %X{span_id}]"
+
+bs:
+  greeting: Welcome to the local book catalog!
 
