disable spring cloud config

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -16,7 +16,7 @@ spring:
   lifecycle:
     timeout-per-shutdown-phase: 15s
   config:
-    import: "optional:configserver:"
+    import: ""
   security:
     oauth2:
       resourceserver:
@@ -24,6 +24,7 @@ spring:
           issuer-uri: http://localhost:8080/realms/Bookshop
   cloud:
     config:
+      enabled: false
       uri: http://localhost:8888
       request-connect-timeout: 5000
       request-read-timeout: 5000
